# hello-world-esp32

./: .clangd  .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  sdkconfig
cmake/: tools.cmake
src/00-greeter/: CMakeLists.txt  greeter.cpp  main.cpp
src/00-greeter/include/greeter/: greeter.h
src/01-blinky/: CMakeLists.txt  blinky.cpp
src/01-blinky/include/blinky/: blinky.h
src/01-blinky/main/: main.cpp
src/02-blinky/: CMakeLists.txt
src/03-prioritization/: CMakeLists.txt
src/03-prioritization-ex/: CMakeLists.txt
src/03-prioritization-ex/main/: main.cpp
src/03-prioritization/main/: main.cpp
src/frpp/: CMakeLists.txt  frpp.cpp
src/frpp/include/frpp/: frpp.h
